<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/teal_200"
    tools:context=".activities.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/teal_700">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#D50000"
            android:gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="Profile"
            android:textSize="34sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toTopOf="@id/et_firstName_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_image_view_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:padding="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_person_24"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp" />
            </FrameLayout>

            <EditText
                android:background="@drawable/button_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/et_firstName_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:hint="First Name"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fl_user_image"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/et_lastName_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:hint="Last Name"
                android:textSize="26sp"
                android:background="@drawable/button_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_firstName_up"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/et_email_up"
                android:layout_width="match_parent"
                android:background="@drawable/button_bg"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:hint="Email"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_lastName_up"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:background="@drawable/button_bg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/et_mobile_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:hint="Mobile number"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email_up" />

            <RadioGroup
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/btn_submit_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_mobile_up">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:background="@drawable/button_bg"
                    android:backgroundTint="@color/bg"
                    android:onClick="onClick"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:backgroundTint="@color/teal_700"
                    android:background="@drawable/button_bg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:onClick="onClick"
                    android:textStyle="bold" />

            </RadioGroup>


            <Button
                android:id="@+id/btn_submit_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/button_bg"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

